v7.4.3/_sources/generated/pcdsdevices.pim.PPM.rst.txt
pcdsdevices.pim.PPM
===================

.. currentmodule:: pcdsdevices.pim

.. autoclass:: PPM

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - lightpath_summary
          - :class:`~pcdsdevices.signal.SummarySignal`
          - 
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.pim.LCLS2ImagerBase`
    
        * - target
          - :class:`~pcdsdevices.pim.LCLS2Target`
          - ``:MMS:STATE``
          - Control of the diagnostic stack via saved positions.
          - hinted
          - Inherited from :class:`~pcdsdevices.pim.LCLS2ImagerBase`
    
        * - y_motor
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS``
          - Direct control of the diagnostic stack motor.
          - normal
          - Inherited from :class:`~pcdsdevices.pim.LCLS2ImagerBase`
    
        * - detector
          - :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
          - ``:CAM:``
          - Area detector settings and readbacks.
          - normal
          - Inherited from :class:`~pcdsdevices.pim.LCLS2ImagerBase`
    
        * - cam_power
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:CAM:PWR``
          - Camera power supply controls.
          - config
          - Inherited from :class:`~pcdsdevices.pim.LCLS2ImagerBase`
    
        * - power_meter
          - :class:`~pcdsdevices.pim.PPMPowerMeter`
          - ``:SPM``
          - Device that measures power of incident beam.
          - normal
          - 
    
        * - yag_thermocouple
          - :class:`~pcdsdevices.sensors.TwinCATThermocouple`
          - ``:YAG``
          - Thermocouple on the YAG holder.
          - normal
          - 
    
        * - led
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:CAM:CIL:PCT``
          - Percent of light from the dimmable illuminatior.
          - config
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: calc_lightpath_state
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: get_lightpath_state
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: lightpath_cpts
    .. autoattribute:: md
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: subscriptions
    .. autoattribute:: y_states
    
    